@@ -27,8 +27,7 @@
 # Rules for configuring parameters of checks (services)
 
 register_rulegroup("checkparams", _("Parameters for Inventorized Checks"),
-    _("With these rules you configure parameters (such as levels) for checks that "
-      "have been found and created by Check_MK inventory."))
+    _("Levels and other parameters for checks found by the Check_MK inventory."))
 group = "checkparams"
 
 subgroup_networking =   _("Networking")
@@ -1300,9 +1299,7 @@ register_rule(
 
 # Create Rules for static checks
 register_rulegroup("static", _("Manual Checks"),
-    _("In cases where you do not want or are not able to use inventory, "
-      "you can manually configure Check_MK based services to monitor "
-      "on your hosts."))
+    _("Statically configured Check_MK checks that do not rely on the inventory"))
 group = "static"
 
 # Add checks that have parameters but are only configured as manual checks
